syntax = "proto3";

package commission;

// ============================================
// COMMISSION MICROSERVICE - gRPC Service Definition
// ============================================

service CommissionService {
  // ===== Commission CRUD =====
  rpc CreateCommission(CreateCommissionRequest) returns (CommissionResponse);
  rpc GetCommission(GetByIdRequest) returns (CommissionResponse);
  rpc GetCommissions(GetCommissionsRequest) returns (CommissionListResponse);
  rpc GetCommissionsByApporteur(GetByApporteurRequest) returns (CommissionListResponse);
  rpc GetCommissionsByPeriode(GetByPeriodeRequest) returns (CommissionListResponse);
  rpc UpdateCommission(UpdateCommissionRequest) returns (CommissionResponse);
  rpc DeleteCommission(GetByIdRequest) returns (DeleteResponse);

  // ===== Bareme CRUD =====
  rpc CreateBareme(CreateBaremeRequest) returns (BaremeResponse);
  rpc GetBareme(GetByIdRequest) returns (BaremeResponse);
  rpc GetBaremes(GetBaremesRequest) returns (BaremeListResponse);
  rpc GetBaremeApplicable(GetBaremeApplicableRequest) returns (BaremeResponse);
  rpc UpdateBareme(UpdateBaremeRequest) returns (BaremeResponse);
  rpc DeleteBareme(GetByIdRequest) returns (DeleteResponse);

  // ===== Palier CRUD =====
  rpc CreatePalier(CreatePalierRequest) returns (PalierResponse);
  rpc GetPalier(GetByIdRequest) returns (PalierResponse);
  rpc GetPaliersByBareme(GetByBaremeRequest) returns (PalierListResponse);
  rpc UpdatePalier(UpdatePalierRequest) returns (PalierResponse);
  rpc DeletePalier(GetByIdRequest) returns (DeleteResponse);

  // ===== Bordereau CRUD =====
  rpc CreateBordereau(CreateBordereauRequest) returns (BordereauResponse);
  rpc GetBordereau(GetByIdRequest) returns (BordereauResponse);
  rpc GetBordereaux(GetBordereauxRequest) returns (BordereauListResponse);
  rpc GetBordereauByApporteurPeriode(GetBordereauByApporteurPeriodeRequest) returns (BordereauResponse);
  rpc UpdateBordereau(UpdateBordereauRequest) returns (BordereauResponse);
  rpc ValidateBordereau(ValidateBordereauRequest) returns (BordereauResponse);
  rpc ExportBordereau(GetByIdRequest) returns (ExportBordereauResponse);
  rpc DeleteBordereau(GetByIdRequest) returns (DeleteResponse);

  // ===== LigneBordereau CRUD =====
  rpc CreateLigneBordereau(CreateLigneBordereauRequest) returns (LigneBordereauResponse);
  rpc GetLigneBordereau(GetByIdRequest) returns (LigneBordereauResponse);
  rpc GetLignesByBordereau(GetByBordereauRequest) returns (LigneBordereauListResponse);
  rpc UpdateLigneBordereau(UpdateLigneBordereauRequest) returns (LigneBordereauResponse);
  rpc ValidateLigne(ValidateLigneRequest) returns (LigneBordereauResponse);
  rpc DeleteLigneBordereau(GetByIdRequest) returns (DeleteResponse);

  // ===== Reprise CRUD =====
  rpc CreateReprise(CreateRepriseRequest) returns (RepriseResponse);
  rpc GetReprise(GetByIdRequest) returns (RepriseResponse);
  rpc GetReprises(GetReprisesRequest) returns (RepriseListResponse);
  rpc GetReprisesByCommission(GetByCommissionRequest) returns (RepriseListResponse);
  rpc ApplyReprise(ApplyRepriseRequest) returns (RepriseResponse);
  rpc CancelReprise(GetByIdRequest) returns (RepriseResponse);
  rpc DeleteReprise(GetByIdRequest) returns (DeleteResponse);

  // ===== StatutCommission CRUD =====
  rpc CreateStatut(CreateStatutRequest) returns (StatutResponse);
  rpc GetStatut(GetByIdRequest) returns (StatutResponse);
  rpc GetStatuts(GetStatutsRequest) returns (StatutListResponse);
  rpc GetStatutByCode(GetStatutByCodeRequest) returns (StatutResponse);
  rpc UpdateStatut(UpdateStatutRequest) returns (StatutResponse);
  rpc DeleteStatut(GetByIdRequest) returns (DeleteResponse);

  // ===== Commission Engine =====
  rpc CalculerCommission(CalculerCommissionRequest) returns (CalculerCommissionResponse);
  rpc GenererBordereau(GenererBordereauRequest) returns (GenererBordereauResponse);
  rpc DeclencherReprise(DeclencherRepriseRequest) returns (RepriseResponse);
}

// ============================================
// ENUMS
// ============================================

enum TypeCalcul {
  TYPE_CALCUL_UNSPECIFIED = 0;
  TYPE_CALCUL_FIXE = 1;
  TYPE_CALCUL_POURCENTAGE = 2;
  TYPE_CALCUL_PALIER = 3;
  TYPE_CALCUL_MIXTE = 4;
}

enum BaseCalcul {
  BASE_CALCUL_UNSPECIFIED = 0;
  BASE_CALCUL_COTISATION_HT = 1;
  BASE_CALCUL_CA_HT = 2;
  BASE_CALCUL_FORFAIT = 3;
}

enum TypePalier {
  TYPE_PALIER_UNSPECIFIED = 0;
  TYPE_PALIER_VOLUME = 1;
  TYPE_PALIER_CA = 2;
  TYPE_PALIER_PRIME_PRODUIT = 3;
}

enum StatutBordereau {
  STATUT_BORDEREAU_UNSPECIFIED = 0;
  STATUT_BORDEREAU_BROUILLON = 1;
  STATUT_BORDEREAU_VALIDE = 2;
  STATUT_BORDEREAU_EXPORTE = 3;
  STATUT_BORDEREAU_ARCHIVE = 4;
}

enum TypeLigne {
  TYPE_LIGNE_UNSPECIFIED = 0;
  TYPE_LIGNE_COMMISSION = 1;
  TYPE_LIGNE_REPRISE = 2;
  TYPE_LIGNE_ACOMPTE = 3;
  TYPE_LIGNE_PRIME = 4;
  TYPE_LIGNE_REGULARISATION = 5;
}

enum StatutLigne {
  STATUT_LIGNE_UNSPECIFIED = 0;
  STATUT_LIGNE_SELECTIONNEE = 1;
  STATUT_LIGNE_DESELECTIONNEE = 2;
  STATUT_LIGNE_VALIDEE = 3;
  STATUT_LIGNE_REJETEE = 4;
}

enum TypeReprise {
  TYPE_REPRISE_UNSPECIFIED = 0;
  TYPE_REPRISE_RESILIATION = 1;
  TYPE_REPRISE_IMPAYE = 2;
  TYPE_REPRISE_ANNULATION = 3;
  TYPE_REPRISE_REGULARISATION = 4;
}

enum StatutReprise {
  STATUT_REPRISE_UNSPECIFIED = 0;
  STATUT_REPRISE_EN_ATTENTE = 1;
  STATUT_REPRISE_APPLIQUEE = 2;
  STATUT_REPRISE_ANNULEE = 3;
}

// ============================================
// COMMON MESSAGES
// ============================================

message GetByIdRequest {
  string id = 1;
}

message GetByBaremeRequest {
  string bareme_id = 1;
}

message GetByBordereauRequest {
  string bordereau_id = 1;
}

message GetByCommissionRequest {
  string commission_id = 1;
}

message GetByApporteurRequest {
  string organisation_id = 1;
  string apporteur_id = 2;
  optional int32 limit = 3;
  optional int32 offset = 4;
}

message GetByPeriodeRequest {
  string organisation_id = 1;
  string periode = 2;
  optional int32 limit = 3;
  optional int32 offset = 4;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}

// ============================================
// COMMISSION MESSAGES
// ============================================

message Commission {
  string id = 1;
  string organisation_id = 2;
  string reference = 3;
  string apporteur_id = 4;
  string contrat_id = 5;
  optional string produit_id = 6;
  string compagnie = 7;
  string type_base = 8;
  string montant_brut = 9;
  string montant_reprises = 10;
  string montant_acomptes = 11;
  string montant_net_a_payer = 12;
  string statut_id = 13;
  string periode = 14;
  string date_creation = 15;
  string created_at = 16;
  string updated_at = 17;
}

message CreateCommissionRequest {
  string organisation_id = 1;
  string reference = 2;
  string apporteur_id = 3;
  string contrat_id = 4;
  optional string produit_id = 5;
  string compagnie = 6;
  string type_base = 7;
  string montant_brut = 8;
  string montant_reprises = 9;
  string montant_acomptes = 10;
  string montant_net_a_payer = 11;
  string statut_id = 12;
  string periode = 13;
  string date_creation = 14;
}

message GetCommissionsRequest {
  string organisation_id = 1;
  optional string apporteur_id = 2;
  optional string periode = 3;
  optional string statut_id = 4;
  optional int32 limit = 5;
  optional int32 offset = 6;
}

message UpdateCommissionRequest {
  string id = 1;
  optional string reference = 2;
  optional string compagnie = 3;
  optional string type_base = 4;
  optional string montant_brut = 5;
  optional string montant_reprises = 6;
  optional string montant_acomptes = 7;
  optional string montant_net_a_payer = 8;
  optional string statut_id = 9;
}

message CommissionResponse {
  Commission commission = 1;
}

message CommissionListResponse {
  repeated Commission commissions = 1;
  int32 total = 2;
}

// ============================================
// BAREME MESSAGES
// ============================================

message Bareme {
  string id = 1;
  string organisation_id = 2;
  string code = 3;
  string nom = 4;
  optional string description = 5;
  TypeCalcul type_calcul = 6;
  BaseCalcul base_calcul = 7;
  optional string montant_fixe = 8;
  optional string taux_pourcentage = 9;
  bool recurrence_active = 10;
  optional string taux_recurrence = 11;
  optional int32 duree_recurrence_mois = 12;
  int32 duree_reprises_mois = 13;
  string taux_reprise = 14;
  optional string type_produit = 15;
  optional string profil_remuneration = 16;
  optional string societe_id = 17;
  optional string canal_vente = 18;
  string repartition_commercial = 19;
  string repartition_manager = 20;
  string repartition_agence = 21;
  string repartition_entreprise = 22;
  int32 version = 23;
  string date_effet = 24;
  optional string date_fin = 25;
  bool actif = 26;
  string created_at = 27;
  string updated_at = 28;
  repeated Palier paliers = 29;
}

message CreateBaremeRequest {
  string organisation_id = 1;
  string code = 2;
  string nom = 3;
  optional string description = 4;
  TypeCalcul type_calcul = 5;
  BaseCalcul base_calcul = 6;
  optional string montant_fixe = 7;
  optional string taux_pourcentage = 8;
  bool recurrence_active = 9;
  optional string taux_recurrence = 10;
  optional int32 duree_recurrence_mois = 11;
  int32 duree_reprises_mois = 12;
  string taux_reprise = 13;
  optional string type_produit = 14;
  optional string profil_remuneration = 15;
  optional string societe_id = 16;
  optional string canal_vente = 17;
  string repartition_commercial = 18;
  string repartition_manager = 19;
  string repartition_agence = 20;
  string repartition_entreprise = 21;
  string date_effet = 22;
  optional string date_fin = 23;
}

message GetBaremesRequest {
  string organisation_id = 1;
  optional bool actif_only = 2;
  optional string type_produit = 3;
  optional int32 limit = 4;
  optional int32 offset = 5;
}

message GetBaremeApplicableRequest {
  string organisation_id = 1;
  optional string type_produit = 2;
  optional string profil_remuneration = 3;
  optional string societe_id = 4;
  optional string canal_vente = 5;
  string date = 6;
}

message UpdateBaremeRequest {
  string id = 1;
  optional string nom = 2;
  optional string description = 3;
  optional TypeCalcul type_calcul = 4;
  optional BaseCalcul base_calcul = 5;
  optional string montant_fixe = 6;
  optional string taux_pourcentage = 7;
  optional bool recurrence_active = 8;
  optional string taux_recurrence = 9;
  optional int32 duree_recurrence_mois = 10;
  optional int32 duree_reprises_mois = 11;
  optional string taux_reprise = 12;
  optional string date_fin = 13;
  optional bool actif = 14;
}

message BaremeResponse {
  Bareme bareme = 1;
}

message BaremeListResponse {
  repeated Bareme baremes = 1;
  int32 total = 2;
}

// ============================================
// PALIER MESSAGES
// ============================================

message Palier {
  string id = 1;
  string organisation_id = 2;
  string bareme_id = 3;
  string code = 4;
  string nom = 5;
  optional string description = 6;
  TypePalier type_palier = 7;
  string seuil_min = 8;
  optional string seuil_max = 9;
  string montant_prime = 10;
  optional string taux_bonus = 11;
  bool cumulable = 12;
  bool par_periode = 13;
  optional string type_produit = 14;
  int32 ordre = 15;
  bool actif = 16;
  string created_at = 17;
  string updated_at = 18;
}

message CreatePalierRequest {
  string organisation_id = 1;
  string bareme_id = 2;
  string code = 3;
  string nom = 4;
  optional string description = 5;
  TypePalier type_palier = 6;
  string seuil_min = 7;
  optional string seuil_max = 8;
  string montant_prime = 9;
  optional string taux_bonus = 10;
  bool cumulable = 11;
  bool par_periode = 12;
  optional string type_produit = 13;
  int32 ordre = 14;
}

message UpdatePalierRequest {
  string id = 1;
  optional string nom = 2;
  optional string description = 3;
  optional string seuil_min = 4;
  optional string seuil_max = 5;
  optional string montant_prime = 6;
  optional string taux_bonus = 7;
  optional bool cumulable = 8;
  optional bool par_periode = 9;
  optional int32 ordre = 10;
  optional bool actif = 11;
}

message PalierResponse {
  Palier palier = 1;
}

message PalierListResponse {
  repeated Palier paliers = 1;
  int32 total = 2;
}

// ============================================
// BORDEREAU MESSAGES
// ============================================

message Bordereau {
  string id = 1;
  string organisation_id = 2;
  string reference = 3;
  string periode = 4;
  string apporteur_id = 5;
  string total_brut = 6;
  string total_reprises = 7;
  string total_acomptes = 8;
  string total_net_a_payer = 9;
  int32 nombre_lignes = 10;
  StatutBordereau statut_bordereau = 11;
  optional string date_validation = 12;
  optional string validateur_id = 13;
  optional string date_export = 14;
  optional string fichier_pdf_url = 15;
  optional string fichier_excel_url = 16;
  optional string commentaire = 17;
  string created_at = 18;
  string updated_at = 19;
  repeated LigneBordereau lignes = 20;
}

message CreateBordereauRequest {
  string organisation_id = 1;
  string reference = 2;
  string periode = 3;
  string apporteur_id = 4;
  optional string commentaire = 5;
  optional string cree_par = 6;
}

message GetBordereauxRequest {
  string organisation_id = 1;
  optional string apporteur_id = 2;
  optional string periode = 3;
  optional StatutBordereau statut = 4;
  optional int32 limit = 5;
  optional int32 offset = 6;
}

message GetBordereauByApporteurPeriodeRequest {
  string organisation_id = 1;
  string apporteur_id = 2;
  string periode = 3;
}

message UpdateBordereauRequest {
  string id = 1;
  optional string commentaire = 2;
  optional StatutBordereau statut_bordereau = 3;
}

message ValidateBordereauRequest {
  string id = 1;
  string validateur_id = 2;
}

message ExportBordereauResponse {
  bool success = 1;
  string pdf_url = 2;
  string excel_url = 3;
}

message BordereauResponse {
  Bordereau bordereau = 1;
}

message BordereauListResponse {
  repeated Bordereau bordereaux = 1;
  int32 total = 2;
}

// ============================================
// LIGNE BORDEREAU MESSAGES
// ============================================

message LigneBordereau {
  string id = 1;
  string organisation_id = 2;
  string bordereau_id = 3;
  optional string commission_id = 4;
  optional string reprise_id = 5;
  TypeLigne type_ligne = 6;
  string contrat_id = 7;
  string contrat_reference = 8;
  optional string client_nom = 9;
  optional string produit_nom = 10;
  string montant_brut = 11;
  string montant_reprise = 12;
  string montant_net = 13;
  optional string base_calcul = 14;
  optional string taux_applique = 15;
  optional string bareme_id = 16;
  StatutLigne statut_ligne = 17;
  bool selectionne = 18;
  optional string motif_deselection = 19;
  optional string validateur_id = 20;
  optional string date_validation = 21;
  int32 ordre = 22;
  string created_at = 23;
  string updated_at = 24;
}

message CreateLigneBordereauRequest {
  string organisation_id = 1;
  string bordereau_id = 2;
  optional string commission_id = 3;
  optional string reprise_id = 4;
  TypeLigne type_ligne = 5;
  string contrat_id = 6;
  string contrat_reference = 7;
  optional string client_nom = 8;
  optional string produit_nom = 9;
  string montant_brut = 10;
  string montant_reprise = 11;
  string montant_net = 12;
  optional string base_calcul = 13;
  optional string taux_applique = 14;
  optional string bareme_id = 15;
  int32 ordre = 16;
}

message UpdateLigneBordereauRequest {
  string id = 1;
  optional string montant_brut = 2;
  optional string montant_reprise = 3;
  optional string montant_net = 4;
  optional bool selectionne = 5;
  optional string motif_deselection = 6;
  optional int32 ordre = 7;
}

message ValidateLigneRequest {
  string id = 1;
  string validateur_id = 2;
  StatutLigne statut = 3;
  optional string motif = 4;
}

message LigneBordereauResponse {
  LigneBordereau ligne = 1;
}

message LigneBordereauListResponse {
  repeated LigneBordereau lignes = 1;
  int32 total = 2;
}

// ============================================
// REPRISE MESSAGES
// ============================================

message Reprise {
  string id = 1;
  string organisation_id = 2;
  string commission_originale_id = 3;
  string contrat_id = 4;
  string apporteur_id = 5;
  string reference = 6;
  TypeReprise type_reprise = 7;
  string montant_reprise = 8;
  string taux_reprise = 9;
  string montant_original = 10;
  string periode_origine = 11;
  string periode_application = 12;
  string date_evenement = 13;
  string date_limite = 14;
  optional string date_application = 15;
  StatutReprise statut_reprise = 16;
  optional string bordereau_id = 17;
  optional string motif = 18;
  optional string commentaire = 19;
  string created_at = 20;
  string updated_at = 21;
}

message CreateRepriseRequest {
  string organisation_id = 1;
  string commission_originale_id = 2;
  string contrat_id = 3;
  string apporteur_id = 4;
  string reference = 5;
  TypeReprise type_reprise = 6;
  string montant_reprise = 7;
  string taux_reprise = 8;
  string montant_original = 9;
  string periode_origine = 10;
  string periode_application = 11;
  string date_evenement = 12;
  string date_limite = 13;
  optional string motif = 14;
  optional string commentaire = 15;
}

message GetReprisesRequest {
  string organisation_id = 1;
  optional string apporteur_id = 2;
  optional StatutReprise statut = 3;
  optional int32 limit = 4;
  optional int32 offset = 5;
}

message ApplyRepriseRequest {
  string id = 1;
  string bordereau_id = 2;
}

message RepriseResponse {
  Reprise reprise = 1;
}

message RepriseListResponse {
  repeated Reprise reprises = 1;
  int32 total = 2;
}

// ============================================
// STATUT COMMISSION MESSAGES
// ============================================

message StatutCommission {
  string id = 1;
  string code = 2;
  string nom = 3;
  optional string description = 4;
  int32 ordre_affichage = 5;
}

message CreateStatutRequest {
  string code = 1;
  string nom = 2;
  optional string description = 3;
  int32 ordre_affichage = 4;
}

message GetStatutsRequest {
  optional int32 limit = 1;
  optional int32 offset = 2;
}

message GetStatutByCodeRequest {
  string code = 1;
}

message UpdateStatutRequest {
  string id = 1;
  optional string nom = 2;
  optional string description = 3;
  optional int32 ordre_affichage = 4;
}

message StatutResponse {
  StatutCommission statut = 1;
}

message StatutListResponse {
  repeated StatutCommission statuts = 1;
  int32 total = 2;
}

// ============================================
// COMMISSION ENGINE MESSAGES
// ============================================

message CalculerCommissionRequest {
  string organisation_id = 1;
  string apporteur_id = 2;
  string contrat_id = 3;
  optional string produit_id = 4;
  string type_produit = 5;
  string profil_remuneration = 6;
  optional string societe_id = 7;
  optional string canal_vente = 8;
  string montant_base = 9;
  string periode = 10;
}

message PrimeApplicable {
  string palier_id = 1;
  string palier_nom = 2;
  string montant = 3;
  string type = 4;
}

message CalculerCommissionResponse {
  Commission commission = 1;
  Bareme bareme_applique = 2;
  repeated PrimeApplicable primes = 3;
  string montant_total = 4;
}

message GenererBordereauRequest {
  string organisation_id = 1;
  string apporteur_id = 2;
  string periode = 3;
  optional string cree_par = 4;
}

message BordereauSummary {
  int32 nombre_commissions = 1;
  int32 nombre_reprises = 2;
  int32 nombre_primes = 3;
  string total_brut = 4;
  string total_reprises = 5;
  string total_net = 6;
}

message GenererBordereauResponse {
  Bordereau bordereau = 1;
  BordereauSummary summary = 2;
}

message DeclencherRepriseRequest {
  string commission_id = 1;
  TypeReprise type_reprise = 2;
  string date_evenement = 3;
  optional string motif = 4;
}
